--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -16,24 +16,15 @@
 
    <div class="chat">
       
-      <div id="sidebar" class="chat__sidebar">
-
-      </div>
-      
+      <div id="sidebar" class="chat__sidebar"> </div>
       <div class="chat__main">
-         <div class="radio-channels">
-            <div class="tags">
-               <% for(let index=0; index < tags.length; index++){ %>
-                 <span id="tag-<%= index %>" class="tag" key="<%= index %>"> <%= tags[index] %> </span>
-               <% } %>
-            </div>
-            <div class="stations"> </div>
-
-            
-
+         
+         <div class="tags">
+            <% for(let index=0; index < tags.length; index++){ %>
+               <span id="tag-<%= index %>" class="tag" key="<%= index %>"> <%= tags[index] %> </span>
+            <% } %>
          </div>
-
-
+         
          <div id="messages" class="chat__messages"></div>
          <div class="compose">
             <form id="message-form">
@@ -48,10 +39,13 @@
    
       <div class="now-playing">
          <div class="now-playing-station" url="">Its All Quiet</div>
-         <button id="play-pause-btn">Play/Pause</button>
-         <button id="sync-play-btn">Sync Play</button>
+         <div class="now-playing-btn-container">
+            <button id="play-pause-btn">Play/Pause</button>
+         </div>  
          <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5">
       </div>
+
+      <div id="stations" class="chat__sidebar"> </div>
 
    </div>
 
@@ -59,11 +53,11 @@
 
    <script id="station-template" type="text/html">
       <div class="station" key={{stationId}} url={{stationUrl}} name={{stationName}}>
-         <h3 class="station-name"> {{ stationName }}</h3>
-         <h5 class="station-language"> {{stationLanguage}} </h5>
-         <h5 class="station-country"> {{stationCountry}} </h5>
-         <ul class="station-genre"> {{#stationTags}} <li> {{.}} </li> {{/stationTags}} </ul>
-         <button class="station-play-btn"> Play </button>
+         <div class="station-name station-play-btn"> {{ stationName }}</div>
+         <ul class="station-genre"> 
+            {{#stationTags}} <li class="feature"> {{.}} </li> {{/stationTags}} 
+            <li class="station-language feature"> {{stationLanguage}} </li> 
+         </ul>
       </div>
    </script>
 
