--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -40,7 +40,7 @@
       <div class="now-playing">
          <div class="now-playing-station" url="">Its All Quiet</div>
          <div class="now-playing-btn-container">
-            <button id="play-pause-btn">Play/Pause</button>
+            <button id="play-pause-btn">Play</button>
          </div>  
          <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5">
       </div>
