--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <head>
-   <title>hymn</title>
+   <title>Hymn Radio</title>
    <link rel = "icon" href="/img/favicon.png">
    <link rel = "stylesheet" href="/css/styles.css">
 </head>
 
 <body>
    <div id="audio-grid"></div>
-   <div id="music-grid"></div>
    <script>
       const room = "<%= room %>"
       const username = "<%= username %>"
